fix: table overflow in small phone

--- a/doc/index.scss
+++ b/doc/index.scss
@@ -16,8 +16,13 @@
   }
 
   .ant-table {
+
     td {
       word-break: normal;
+    }
+
+    .ant-table-content{
+      overflow-x: scroll;
     }
   }
 }
